--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
           		</div>
-          		<h3 class="mb-4">Zoom</h3>
+          		<h3 class="mb-4">my small info</h3>
 	            <p><a href="images/visiting-card.jpg" download>Download Visiting Card</a></p>
 				
 	          </div>
